@@ -15,6 +15,12 @@
 
 <hr />
 
+<!-- ################################################################# -->
+<!-- # remember: # -->
+<!-- #  - update order (latest first) # -->
+<!-- #  - doc version at the very bottom of the page # -->
+<!-- ################################################################# -->
+
 <p>The entries are ordered in latest-update-first order. If you have
 material that you'd like to see on this page, mail me (Kai Vehmanen) about it.</p>
 
@@ -34,8 +40,10 @@ material that you'd like to see on this page, mail me (Kai Vehmanen) about it.</
 <!-- ###  new section ### -->
 <p><b>Tutorials and Articles</b></p>
 <ul>
+<li> <a href="http://cantor.ee.ucla.edu/~jsab/ecasound.html">Jesse S.A. Bridgewater's Ecasound Examples</a> (en)
+     - An example multitrack recording project with Ecasound</li>
 <li> <a href="http://patat.org/~kbr/muziek/diy/record/">A Poor Man's Guide to Home Recording</a> (be/nl)
-     - A home recording HOWTO that explains using ecasound for multitrack recoridng. By Koen Breugelmans.
+     - A home recording HOWTO that explains using ecasound for multitrack recoridng. By Koen Breugelmans.</li>
 <li> <a href="http://linux.oreillynet.com/pub/a/linux/2001/02/02/ladspa.html?page=3">Ecasound as a host for LADSPA effects</a> (en)
      - Dave Phillips' article &quot;Linux Audio Plug-Ins: A Look Into LADSPA&quot; covers use of Ecasound as a LADSPA host.</li>
 <li> <a href="http://linux.oreillynet.com/pub/a/linux/2001/07/20/linux_guitar.html?page=4">Ecamegapedal as a guitar effect processor</a> (en)
@@ -59,7 +67,7 @@ material that you'd like to see on this page, mail me (Kai Vehmanen) about it.</
 
 <hr />
 <p>Back to <a href="index.html">index</a>.</p>
-<p align="right"><small>[Document version 20030319-4.]</small></p>
+<p align="right"><small>[Document version 20030825-5.]</small></p>
 <hr />
 
 <!-- ###  end ### -->
