@@ -485,7 +485,33 @@ int ECA_SESSION::interpret_general_option (const std::string& argu)
   switch(argu[1]) {
   case 'd':
     {
-      ECA_LOGGER::instance().set_log_level_bitmask(atoi(kvu_get_argument_number(1, argu).c_str()));
+      if (argu.size() > 2 && argu[2] == ':') {
+	/* argu == "-d:XXX" */
+	ECA_LOGGER::instance().set_log_level_bitmask(atoi(kvu_get_argument_number(1, argu).c_str()));
+      }
+      else {
+	/* argu == "-dXXX" */
+	
+	ECA_LOGGER::instance().set_log_level_bitmask(0);
+	ECA_LOGGER::instance().set_log_level(ECA_LOGGER::errors, 1);
+	ECA_LOGGER::instance().set_log_level(ECA_LOGGER::info, 1);
+	ECA_LOGGER::instance().set_log_level(ECA_LOGGER::subsystems, 1);
+	ECA_LOGGER::instance().set_log_level(ECA_LOGGER::user_objects, 1);
+	ECA_LOGGER::instance().set_log_level(ECA_LOGGER::eiam_return_values, 1);
+
+	if (argu.size() > 2 && argu[2] == 'd') {
+	  /* argu == "-dd" */
+	  ECA_LOGGER::instance().set_log_level(ECA_LOGGER::system_objects, 1);	  
+
+	  if (argu.size() > 3 && argu[3] == 'd') {
+	    /* argu == "-ddd" */
+	    ECA_LOGGER::instance().set_log_level(ECA_LOGGER::module_names, 1);
+	    ECA_LOGGER::instance().set_log_level(ECA_LOGGER::functions, 1);
+	    ECA_LOGGER::instance().set_log_level(ECA_LOGGER::continuous, 1);
+	  }
+	}
+      }
+
       MESSAGE_ITEM mtempd;
       mtempd << "(eca-session) Set debug level to: " << ECA_LOGGER::instance().get_log_level_bitmask();
       ECA_LOG_MSG(ECA_LOGGER::info, mtempd.to_string());
